2010-05-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘struct branchhead’ with ‘struct wlink’.

	Here, "U" means "Update to walk ‘struct wlink’ list".
	* base.h (struct branchhead): Delete.
	(struct hshentry): Change type of member ‘branches’ to ‘struct wlink *’.
	* ci.c (newbranch): Change type to ‘struct wlink’.
	(BHDELTA): New macro.
	(addbranch): U; use ‘BHDELTA’.
	* rcs.c (buildtree): U.
	* rcsgen.c (putdelta, puttree): U.
	* rcsrev.c (genbranch): U.
	* rcssyn.c (getdelta): U.
	* rlog.c (putadelta, putforest, exttree, recentdate, extdate): U.

2010-05-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘struct wlink’ for ‘ADMIN (locks)’ list.

	Here, "U" means "Update to walk ‘struct wlink’ list".
	* base.h (struct rcslock): Delete member ‘nextlock’.
	(struct repository): In sub-‘struct admin’,
	change type of member ‘locks’ to ‘struct wlink *’.
	* ci.c (removelock): U.
	* co.c (rmlock): U.
	* rcs.c (breaklock, branchpoint): U.
	(dolocks): Update access to ‘ADMIN (locks)’.
	* rcsclean.c (unlock): U.
	* rcsedit.c (findlock): U.
	(addlock): U; use ‘wprepend’.
	* rcsgen.c (putadmin): U.
	* rcssyn.c (getadmin): U; use ‘wextend’.
	(gettree): U.
	* rlog.c (extractdelta, trunclocks, main): U.

2010-05-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: wprepend

	* b-esds.h (wprepend): New func decl.
	* b-esds.c (PREPEND_BODY): New macro.
	(prepend): Use ‘PREPEND_BODY’.
	(wprepend): New func.

2010-05-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘struct Status’ with ‘struct link’ + ‘struct u_state’.

	* rcs.c (struct u_state): New.
	(struct Status): Delete.
	(statelst): Change type to ‘struct link’.
	(nextstate): Delete var.
	(getstates): Take ‘struct link **’; use ‘extend’.
	(main): Update call to ‘getstates’; update
	‘statelst’ access to walk ‘struct link’ list.

2010-05-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Replace ‘struct Datepairs’ with ‘struct link’ + ‘struct daterange’.

	* rlog.c (struct daterange): New.